# Course-CompilePrincipal-PL0

./: .gitignore  CMakeLists.txt  E0101.COD  ELSE.COD  NEQL.COD  P9102.COD  PL01.cpp  Unit1.cpp  Unit1.h
test_code/: ELSE.PL0  FOR.PL0
